--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "passix",
-  "version": "0.0.1",
-  "description": "hash a string into 6-char base64 for appending to a password, perhaps yearly",
+  "version": "0.0.2",
+  "description": "hash a string into 6-char base64 for appending to a password",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
