--- a/package.json
+++ b/package.json
@@ -1,27 +1,29 @@
 {
-  "name": "passix",
+  "name": "halfpass",
   "version": "0.0.2",
   "description": "hash a string into 6-char base64 for appending to a password",
-  "main": "index.js",
+  "main": "halfpass.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gavinengel/passix.git"
+    "url": "git+https://github.com/gavinengel/halfpass.git"
   },
   "keywords": [],
   "author": "Gavin Engel <gavin@engel.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/gavinengel/passix/issues"
+    "url": "https://github.com/gavinengel/halfpass/issues"
   },
-  "homepage": "https://github.com/gavinengel/passix#readme",
+  "homepage": "https://github.com/gavinengel/halfpass#readme",
   "dependencies": {
     "copy-paste": "1.*",
-    "pash": "0.*"
+    "minimist": "^1.2.0",
+    "pash": "0.*",
+    "tldjs": "^1.5.3"
   },
   "bin": {
-    "passix": "./index.js"
+    "halfpass": "./halfpass.js"
   }
 }
